<resources>
    <string name="app_name">Servimax3000</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registro_usuario">Registrate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="juan_perez">Juan Perez</string>
    <string name="calificacion_plantilla">4.5</string>
    <string name="email_label">email</string>
    <string name="contrasena_label">contraseña</string>
    <string name="ingresar_label">Ingresar</string>
    <string name="sin_cuenta_label">¿Aún no tienes una cuenta?</string>
    <string name="registrarse_label">Registrarse</string>
    <string name="con_cuenta_label">¿Ya tienes una cuenta?</string>
    <string name="login_title_label">Es bueno tenerte de vuelta</string>
    <string name="registro_title_label">Te damos la bienvenida</string>
    <string name="reg_usr_label">Solo necesitamos unos cuantos datos más</string>
    <string name="rbUsuario">Solicito servicios</string>
    <string name="rbTrabajador">Presto servicios</string>
    <string name="completar_registro">Completar registro</string>
    <string name="Fontanero">Fontanería</string>
    <string name="restablecer_label">¿Olvidaste tu contraseña?</string>
    <string name="restablecer_boton">Restablecer contraseña</string>
    <string name="restablecer_title_label">Restablecer contraseña</string>
    <string name="instruccionesRes_label">Introduzca el correo electrónico con el que se registró para enviarle las instrucciones para restablecer su contraseña</string>


    <string-array name="dummy_nombres">
        <item>Oscar Garcia</item>
        <item>Maria Magdalena</item>
        <item>Gabo Velazquez</item>
        <item>Paco Garcia</item>
        <item>Elsa Salazar</item>
        <item>Cloti</item>
        <item>Rocky</item>
        <item>Chucho</item>
        <item>Miguel</item>
        <item>Jeremy</item>
        <item>Javier</item>
    </string-array>

    <string-array name="dummy_oficios">
        <item>Electricista</item>
        <item>Fontanero</item>
        <item>Carpintero</item>
        <item>Cerrajero</item>
        <item>Jardinero</item>
        <item>Tapicería</item>
        <item>Vidriero</item>

    </string-array>

    <string-array name="dummy_calificaciones">
        <item>4.9</item>
        <item>4.8</item>
        <item>4.5</item>
        <item>4.4</item>
        <item>3.9</item>
        <item>4.0</item>
        <item>4.9</item>
        <item>4.2</item>
        <item>2.1</item>
        <item>1.5</item>
        <item>4.8</item>

    </string-array>


    <array name="dummy_fotos">
        <item>@drawable/t1</item>
        <item>@drawable/t2</item>
        <item>@drawable/t3</item>
        <item>@drawable/t5</item>
        <item>@drawable/t1</item>
        <item>@drawable/t2</item>
        <item>@drawable/t3</item>
        <item>@drawable/t5</item>
        <item>@drawable/t1</item>
        <item>@drawable/t2</item>
        <item>@drawable/t3</item>

    </array>


    /// PARA EL REGISTRO DE TRABAJADORES
    <array name="nombresRegistro">
        <item>Menaal</item>
        <item>Elleanor</item>
        <item>Keziah</item>
        <item>Elly</item>
        <item>Shelly</item>
        <item>Raheem</item>
        <item>Fatema</item>
        <item>Antoine</item>
        <item>Rhodri</item>
        <item>Robbie</item>
        <item>Aleksander</item>
        <item>Vinay</item>
        <item>Kian</item>
        <item>Nansi</item>
        <item>Brad</item>
        <item>Eshaal</item>
        <item>Shanon</item>
        <item>Harper-Rose</item>
        <item>Esme</item>
        <item>Calista</item>
        <item>Usamah</item>
        <item>Cristiano</item>
        <item>Gianluca</item>
        <item>Lloyd</item>
        <item>Anushka</item>
        <item>Parker</item>
        <item>Leroy</item>
        <item>Danniella</item>
        <item>Priya</item>
        <item>Dewey</item>
        <item>Nikhil</item>
        <item>Becky</item>
        <item>Tashan</item>
        <item>Kaiden</item>
        <item>Kenny</item>
        <item>Arianna</item>
        <item>Shay</item>
        <item>Mikaela</item>
        <item>Kornelia</item>
        <item>Dru</item>
        <item>Maddy</item>
        <item>Cleo</item>
        <item>Tyriq</item>
        <item>Eryk</item>
        <item>Helena</item>
        <item>Ishika</item>
        <item>Emerson</item>
        <item>Hughie</item>
        <item>Rosina</item>
        <item>Vienna</item>


    </array>

    <array name="apesRegistro">
        <item>Handley</item>
        <item>Hagan</item>
        <item>Penn</item>
        <item>Potts</item>
        <item>Woods</item>
        <item>Shepard</item>
        <item>Abbott</item>
        <item>Fitzpatrick</item>
        <item>Espinoza</item>
        <item>Meadows</item>
        <item>Ward</item>
        <item>Franks</item>
        <item>Acevedo</item>
        <item>Woolley</item>
        <item>Walmsley</item>
        <item>Mccullough</item>
        <item>Cardenas</item>
        <item>Freeman</item>
        <item>Rosas</item>
        <item>Long</item>
        <item>Larsen</item>
        <item>Delacruz</item>
        <item>Stanton</item>
        <item>Milne</item>
        <item>Garrison</item>
        <item>Knowles</item>
        <item>Smyth</item>
        <item>Keller</item>
        <item>Mcbride</item>
        <item>Dunkley</item>
        <item>Landry</item>
        <item>Searle</item>
        <item>Beil</item>
        <item>Norris</item>
        <item>Oneil</item>
        <item>Miranda</item>
        <item>Sims</item>
        <item>Wade</item>
        <item>Lowe</item>
        <item>Tran</item>
        <item>Emerson</item>
        <item>Sharma</item>
        <item>Barnett</item>
        <item>Hussain</item>
        <item>Alvarez</item>
        <item>Pierce</item>
        <item>Paine</item>
        <item>Simpson</item>
        <item>Mcdaniel</item>
        <item>Coombes</item>


    </array>

</resources>