<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/pad_registro_login">

        <TextView
            android:id="@+id/registro_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/registro_title_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_h" />

        <EditText
            android:id="@+id/email_registro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:fontFamily="@font/abeezee"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_h" />

        <EditText
            android:id="@+id/password_registro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrasena_label"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:fontFamily="@font/abeezee"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_h" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbUsuario"
                android:fontFamily="@font/abeezee"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rbTrab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbTrabajador"
                android:fontFamily="@font/abeezee"/>
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_h" />

        <Button
            android:id="@+id/registro_boton_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:onClick="registro"
            android:text="@string/registrarse_label"
            android:fontFamily="@font/abeezee"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/con_cuenta_label"
                android:fontFamily="@font/abeezee"/>

            <Button
                android:id="@+id/ingresar_boton_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:onClick="loginView"
                android:text="@string/ingresar_label"
                android:fontFamily="@font/abeezee"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>